--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 body {
-  margin-left: 15vw;
-  margin-right: 15vw;
+  display: flex;
+  justify-content: center;
+  margin-right: 2vw;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
